[tool.poetry]
name = "huberman-lab-transcripts"
version = "0.1.0"
description = "Full transcripts of the Huberman Lab Podcast, pulled from YouTube"
authors = ["Erik Overdahl"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
youtube_dl = "^2021.6.6"
webvtt-py = "^0.4.6"
pelican = "^4.6.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
